[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Brazier.png" type="Texture" id=1]
[ext_resource path="res://Sprites/fireball-lion.png" type="Texture" id=2]
[ext_resource path="res://Brazier.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 5.5 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.24838, 0.885529, 0.952484, 1 )
colors = PoolColorArray( 0.902852, 0, 0, 1, 1, 0.793828, 0, 1, 0.703125, 0.521839, 0.0401361, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.827214, 0.911447 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 4.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 12 )

[node name="Brazier" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 3
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -29.5 )
shape = SubResource( 1 )

[node name="TelegraphParticles" type="CPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
explosiveness = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 8, 1 )
direction = Vector2( 0, -1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
color_ramp = SubResource( 2 )

[node name="FireParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -29 )
z_index = 2
emitting = false
amount = 50
lifetime = 0.4
lifetime_randomness = 0.78
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 6, 1 )
direction = Vector2( 0, -1 )
spread = 12.01
gravity = Vector2( 0, 0 )
initial_velocity = 85.19
color_ramp = SubResource( 3 )

[node name="TelegraphTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 0, -34.5 )
shape = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -42 )
shape = SubResource( 5 )

[connection signal="timeout" from="TelegraphTimer" to="." method="_on_TelegraphTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
